--- a/.github/workflows/opencommit.yml
+++ b/.github/workflows/opencommit.yml
@@ -1,4 +1,4 @@
-name: 'OpenCommit Action'
+name: "OpenCommit Action"
 
 on:
   push:
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js Environment
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: "16"
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
@@ -32,7 +32,7 @@ jobs:
 
           # customization
           OCO_OPENAI_MAX_TOKENS: 500
-          OCO_OPENAI_BASE_PATH: ''
+          OCO_OPENAI_BASE_PATH: ""
           OCO_DESCRIPTION: false
           OCO_EMOJI: false
           OCO_MODEL: gpt-3.5-turbo
