refactor(package.json): remove husky pre-commit hook and update lint-staged to run format and lint:fix only on typescript files to improve performance and avoid unnecessary checks

--- a/package.json
+++ b/package.json
@@ -65,14 +65,10 @@
     "type-check": "tsc --noEmit",
     "watch": "yarn type-check -- --watch"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "yarn format"
+    "*.{ts,tsx}": [
+      "yarn format",
+      "yarn lint:fix"
     ]
   },
   "browserslist": {
