--- a/package.json
+++ b/package.json
@@ -12,44 +12,6 @@
     "name": "Harris Fauntleroy",
     "url": "https://github.com/HarrisFauntleroy"
   },
-  "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@mantine/core": "^6.0.13",
-    "@mantine/hooks": "^6.0.13",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.34",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
-    "chart.js": "^4.3.0",
-    "mathjs": "^11.8.0",
-    "react": "^18.2.0",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.58.0",
-    "eslint": "^8.38.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-import-resolver-typescript": "^3.5.5",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-sonarjs": "0.19.0",
-    "eslint-plugin-storybook": "^0.6.11",
-    "gh-pages": "^5.0.0",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
-    "prettier": "^2.8.7"
-  },
   "scripts": {
     "build": "react-scripts build",
     "predeploy": "yarn build",
@@ -62,8 +24,10 @@
     "prepare": "husky install",
     "start": "react-scripts start",
     "test": "react-scripts test --watchAll=false",
+    "test:ci": "yarn test --ci --coverage --maxWorkers=2",
+    "test:watch": "yarn test --watchAll",
     "type-check": "tsc --noEmit",
-    "watch": "yarn type-check -- --watch"
+    "watch": "yarn type-check --watch"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
@@ -126,6 +90,12 @@
         }
       ],
       "import/extensions": "off",
+      "react-hooks/exhaustive-deps": [
+        "warn",
+        {
+          "enableDangerousAutofixThisMayCauseInfiniteLoops": true
+        }
+      ],
       "simple-import-sort/imports": [
         "off",
         {
@@ -142,6 +112,46 @@
           ]
         }
       ]
-    }
+    },
+    "root": true
+  },
+  "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@mantine/core": "^6.0.13",
+    "@mantine/hooks": "^6.0.13",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.34",
+    "@types/react": "^18.2.7",
+    "@types/react-dom": "^18.2.4",
+    "chart.js": "^4.3.0",
+    "mathjs": "^11.8.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "typescript": "5.0.3",
+    "web-vitals": "^2.1.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.42.0",
+    "eslint-config-next": "13.4.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-sonarjs": "0.19.0",
+    "eslint-plugin-storybook": "^0.6.12",
+    "eslint-watch": "^8.0.0",
+    "gh-pages": "^5.0.0",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.7"
   }
 }
